--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Sam;User Id=sa;Password=!Morning1;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=DEMO;User Id=sa;Password=!Morning1;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
